--- a/Hotel_Booking_Analysis_Capstone_Project_Almabetter.ipynb
+++ b/Hotel_Booking_Analysis_Capstone_Project_Almabetter.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Lavanya0707/Hotel-Booking-Analysis/blob/main/Hotel_Booking_Analysis_Capstone_Project_Almabetter.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "hLpbsEL32RJy"
       },
       "source": [
@@ -2470,7 +2480,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
